--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
   </head>
   <body>
 
-    <div class="container">
+    <div class="container p-t-2">
       <!-- About  -->
       <div class="row">
         <div class="col-sm-4">
-          <h3>About Full Stack Conf</h3>
-          <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
+          <h3 class="m-b-2">About Full Stack Conf</h3>
+          <img class="m-b-1 img-fluid img-rounded"src="img/background.jpg" alt="Charleston"
+          <p>The beautiful city of Charleston, South Carolina will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
         </div>
         <div class="col-sm-4">
-          <h3>Expert Speakers</h3>
+          <h3 class="m-b-2">Expert Speakers</h3>
           <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
           <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
           <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
         </div>
         <div class="col-sm-4">
-          <h3>What You'll Learn</h3>
+          <h3 class="m-b-2">What You'll Learn</h3>
           <ul>
             <li><strong>MongoDB</strong>: NoSQL database</li>
             <li><strong>Angular</strong>: JavaScript framework</li>
@@ -38,6 +39,14 @@
           </ul>
         </div>
       </div> <!--/About  -->
+      <!-- speakers  -->
+      <h1 class="display-4 text-xs-center m-y-3 text-muted">Speakers</h1>
+      [speaker bios go here]
+
+      <!-- schedule  -->
+      <h1 class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
+      [schedule goes here]
+
     </div> <!-- /.container  -->
 
 
