--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <div class="container p-t-2">
       <!-- About  -->
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-lg-4 col-lg-push-4">
           <h3 class="m-b-2">About Full Stack Conf</h3>
           <img class="m-b-1 img-fluid img-rounded"src="img/background.jpg" alt="Charleston"
           <p>The beautiful city of Charleston, South Carolina will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-lg-4 col-lg-pull-4">
           <h3 class="m-b-2">Expert Speakers</h3>
           <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
           <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
           <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-lg-4">
           <h3 class="m-b-2">What You'll Learn</h3>
           <ul>
             <li><strong>MongoDB</strong>: NoSQL database</li>
@@ -46,6 +46,25 @@
       <!-- schedule  -->
       <h1 class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
       [schedule goes here]
+
+      <!-- signup form -->
+      <hr>
+      <div class="row p-y-2 text-muted">
+        <div class="col-md-6">
+          <p><strong>About Treehouse</strong></p>
+          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Sign up</button>
+            </span>
+          </div>
+        </div>
+      </div>
+      <hr><!-- /signup form -->
 
     </div> <!-- /.container  -->
 
