--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
   </head>
   <body>
+    <!-- navbar -->
+    <nav class="navbar navbar-dark bg-primary navbar-fixed-top">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#speakers">Speakers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#schedule">Schedule</a>
+          </li>
+        </ul>
+        <a class="navbar-brand pull-sm-right m-r-0" href="www.teamtreehouse.com">Presented by Treehouse</a>
+      </div>
+    </nav>
+    <!-- /navbar -->
 
     <div class="container p-t-2">
       <!-- About  -->
@@ -50,11 +71,11 @@
       <!-- signup form -->
       <hr>
       <div class="row p-y-2 text-muted">
-        <div class="col-md-6">
+        <div class="col-md-6 col-xl-5">
           <p><strong>About Treehouse</strong></p>
           <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-xl-5 col-xl-offset-2">
           <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Email">
