--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -127,7 +127,7 @@
          </div>
         </div>
         <div class="col-md-6 col-lg-4">
-          div class="card">
+          <div class="card">
           <img class="card-img-top img-fluid" src="img/json.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Jason Babel</h4>
