--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -63,14 +63,14 @@
         </div>
         <div class="col-lg-4">
           <h3 class="m-b-2">What You'll Learn</h3>
-          <ul>
-            <li><strong>MongoDB</strong>: NoSQL database</li>
-            <li><strong>Angular</strong>: JavaScript framework</li>
-            <li><strong>Express</strong>: Framework for Node</li>
-            <li><strong>Node.js</strong>: JavaScript environment</li>
-            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
-            <li><strong>Babel</strong>: JavaScript compiler</li>
-          </ul>
+          <div class="list-group">
+            <a href="#" class="list-group-item"><strong>MongoDB</strong>: NoSQL database</a>
+            <a href="#" class="list-group-item"><strong>Angular</strong>: JavaScript framework </a>
+            <a href="#" class="list-group-item"><strong>Express</strong>: Framework for Node</a>
+            <a href="#" class="list-group-item"><strong>Node.js</strong>: JavaScript environment</a>
+            <a href="#" class="list-group-item"><strong>ES2015</strong>: Latest version of JavaScript</a>
+            <a href="#" class="list-group-item"><strong>Babel</strong>: JavaScript compiler</a>
+          </div>
         </div>
       </div> <!--/About  -->
       <!-- speakers  -->
@@ -141,7 +141,44 @@
 
       <!-- schedule  -->
       <h1 class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
-      [schedule goes here]
+      <ul class="list-group">
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Keynote: Internet of Things
+          <span class="label label-info label-pill pull-xs-right">9:00am</span></h4>
+          Nodestradamus
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Angular Basics
+            <span class="label label-info label-pill pull-xs-right">10:00am</span></h4>
+          Angie McAngular
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Hey, Mongo!
+            <span class="label label-info label-pill pull-xs-right">11:00am</span></h4>
+          Jay Query
+        </li>
+        <li class="list-group-item list-group-item-success">
+          <h4 class="list-group-item-heading">Lunch Break
+            <span class="label label-info label-pill pull-xs-right">12:00pm</span></h4>
+          Free pizza for everyone!
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Introducing ES2015
+            <span class="label label-info label-pill pull-xs-right">1:00pm</span></h4>
+          Ecma Scriptnstuff
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Gettin' MEAN
+            <span class="label label-info label-pill pull-xs-right">2:00pm</span></h4>
+          Geo "Lo" Cation
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">What's Babel?
+            <span class="label label-info label-pill pull-xs-right">3:00pm</span></h4>
+          Json Babel
+        </li>
+      </ul>
+      <!--/schedule-->
 
       <!-- callout button -->
       <button type="button" class="btn btn-info-outline btn-lg center-block m-y-3">Don't miss out, Register now!</button>
