--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -39,11 +39,11 @@
         <h1 class="display-2">Full Stack Conf<h1>
         <p class="lead">A one day conference about all things Javascript!</p>
         <div class="btn-group m-t-2" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-primary btn-lg">Register Now</button>
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#register">Register Now</button>
           <a class="btn btn-secondary btn-lg" href="#speakers">See Speakers</a>
         </div>
       </div>
-    </div>    
+    </div>
     <!-- /jumbotron -->
 
     <div class="container p-t-2">
@@ -181,7 +181,8 @@
       <!--/schedule-->
 
       <!-- callout button -->
-      <button type="button" class="btn btn-info-outline btn-lg center-block m-y-3">Don't miss out, Register now!</button>
+      <button type="button" class="btn btn-info-outline btn-lg center-block m-y-3" data-toggle="modal" data-target="#register">
+        Don't miss out, Register now!</button>
 
       <!-- signup form -->
       <hr>
@@ -203,6 +204,28 @@
       <hr><!-- /signup form -->
 
     </div> <!-- /.container  -->
+    <!--==========================
+          FORM MODAL
+      ============================ -->
+    <div id="register" class="modal fade">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">Register for Full Stack Conf</h4>
+          </div>
+          <div class="modal-body">
+            <p>[form goes here...]</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
 
     <!-- jQuery first, then Bootstrap JS. -->
