--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
     <!-- navbar -->
     <nav class="navbar navbar-dark bg-primary navbar-fixed-top">
       <div class="container">
@@ -48,7 +48,7 @@
 
     <div class="container p-t-2">
       <!-- About  -->
-      <div class="row">
+      <div id="about" class="row">
         <div class="col-lg-4 col-lg-push-4">
           <h3 class="m-b-2">About Full Stack Conf</h3>
           <img class="m-b-1 img-fluid img-rounded"src="img/background.jpg" alt="Charleston"
