--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css" >
   </head>
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
     <!-- navbar -->
