adding collapsible content to schedule

--- a/ConfDevSite/index.html
+++ b/ConfDevSite/index.html
@@ -143,41 +143,76 @@
       <!-- schedule  -->
       <h1 id="schedule" class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
       <ul class="list-group">
+        <a data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">Keynote: Internet of Things
           <span class="label label-info label-pill pull-xs-right">9:00am</span></h4>
           Nodestradamus
         </li>
+        </a>
+        <div id="collapse1" class="collapse">
+          In this class you'll learn all things about the internet.
+        </div>
+        <a data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">Angular Basics
             <span class="label label-info label-pill pull-xs-right">10:00am</span></h4>
           Angie McAngular
         </li>
+        </a>
+        <div id="collapse2" class="collapse">
+          Angie McAngular will take you through the basics of Angular 1 and Angular 2 in this class.
+        </div>
+        <a data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">Hey, Mongo!
             <span class="label label-info label-pill pull-xs-right">11:00am</span></h4>
           Jay Query
         </li>
+        </a>
+        <div id="collapse3" class="collapse">
+          Jay will teach you all the ins and outs of this noSQL database.
+        </div>
+        <a data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
         <li class="list-group-item list-group-item-success">
           <h4 class="list-group-item-heading">Lunch Break
             <span class="label label-info label-pill pull-xs-right">12:00pm</span></h4>
           Free pizza for everyone!
         </li>
+        </a>
+        <div id="collapse4" class="collapse">
+          Yay pizza!
+        </div>
+        <a data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">Introducing ES2015
             <span class="label label-info label-pill pull-xs-right">1:00pm</span></h4>
           Ecma Scriptnstuff
         </li>
+        </a>
+        <div id="collapse5" class="collapse">
+          Interested in learning the new changes with ES6? Ecma will tell you all about it in this class.
+        </div>
+        <a data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">Gettin' MEAN
             <span class="label label-info label-pill pull-xs-right">2:00pm</span></h4>
           Geo "Lo" Cation
         </li>
+        </a>
+        <div id="collapse6" class="collapse">
+          Geo will give you a nice overview about each piece of the MEAN stack.
+        </div>
+        <a data-toggle="collapse" data-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
         <li class="list-group-item">
           <h4 class="list-group-item-heading">What's Babel?
             <span class="label label-info label-pill pull-xs-right">3:00pm</span></h4>
           Json Babel
         </li>
+        </a>
+        <div id="collapse7" class="collapse">
+          Json will babble to you about all there is to know about babel.
+        </div>
       </ul>
       <!--/schedule-->
 
