--- a/threadly/index.html
+++ b/threadly/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Threadly</title>
 
     <!--bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,11 +16,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12">
-                    <h1>threadly</h1>
+                    <h1 class="p-l-20">threadly</h1>
                 </div>
             </div>
         </div>
     </header>
-
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <form class="form" />
+                    <div class="col-xs-8 col-md-10">
+                        <input id="comment" type="text" placeholder="share your thoughts">
+                    </div>
+                <div class="col-xs-4 col-md-2">
+                    <button type="submit" class="btn">post</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
