adding static comments and styles

--- a/threadly/index.html
+++ b/threadly/index.html
@@ -33,6 +33,10 @@
                 </div>
                 </form>
             </div>
+            <ul id="comments" class="comments">
+                <li>Have you felt it?</li>
+                <li>There has been an awakening!</li>
+            </ul>
         </div>
     </div>
 </body>
