jQuery now saves input to comment list

--- a/threadly/index.html
+++ b/threadly/index.html
@@ -39,5 +39,8 @@
             </ul>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
